api service hosted in heroku to serach random breakingbad quotes

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
   height: 100%;
 }
 body {
-  background-image: url(logo.svg), -webkit-linear-gradient(top left, #007d35 0%, #007d35 40%, #0f574e 100%);
+  background-image: url(logo.svg), -webkit-linear-gradient(top left, #1406dd 0%, #1c6ba0 40%, #10d4bd 100%);
   min-height: 100%;
   background-position: center 80px, center center;
   background-repeat:no-repeat;
